Login auth is correct with tsoa
